# camellia-editor

./: .gitignore  Cargo.toml  build-installer.sh  build.rs  camellia-editor.iss
.cargo/: config.toml
assets/: latexmkrc
src/: main.rs
templates/: paper.tex  report.tex
