[package]
name = "camellia-editor"
version = "0.1.1"
edition = "2024"

[dependencies]
eframe = "0.31"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
rfd = "0.15"
serde_json = "1"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["ico", "jpeg"] }
winresource = "0.1"
